FIX: Weird wrapping bug fix

--- a/src/hs-button/_button-base.scss
+++ b/src/hs-button/_button-base.scss
@@ -27,7 +27,7 @@
 	.hs-button {
 		width: 100%;
 		min-width: 62px;
-		max-width: max-content;
+		// max-width: max-content;
 		
 		display: inline-flex;
 		justify-content: center;
@@ -65,7 +65,6 @@
 			font-size: hs-core.theme-key-create('button-label-size', inherit);
 			font-weight: inherit;
 			line-height: inherit;
-			white-space: nowrap;
 		}
 	}
 }
